--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -46,6 +46,10 @@ main {
                 height: initial;
                 max-width: 800px;
 
+                .transition {
+                    transition: .7s;
+                }
+
                 .carousel-wrap {
                     position: relative;
                     background-color: #fff;
@@ -270,32 +274,33 @@ main {
             flex: 1 0 auto;
             color: #fff;
             overflow: hidden;
-            //display: none;
+            background: radial-gradient(ellipse at bottom, #171b2e 10%, #000000 80%);
+            display: block;
 
-            &::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                background-size: 100%;
-                transform: translateZ(-1px) scale(2.1);
-                z-index: -1;
-                background: radial-gradient(ellipse at bottom, #171b2e 10%, #000000 80%);
-            }
+            //&::after {
+            //    content: '';
+            //    position: absolute;
+            //    top: 0;
+            //    bottom: 0;
+            //    left: 0;
+            //    right: 0;
+            //    //background-size: -100%;
+            //    z-index: -1;
+			//
+            //    //transform: translateZ(-1px) scale(2.1);
+            //}
 
             @function multiple-box-shadow ($n) {
                 $value: '#{random(2000)}px #{random(2000)}px #FFF';
                 @for $i from 2 through $n {
-                    $value: '#{$value} , #{random(3000)}px #{random(2000)}px #FFF';
+                    $value: '#{$value} , #{random(4000)}px #{random(2000)}px #FFF';
                 }
 
                 @return unquote($value)
             }
-            $shadows-small:  multiple-box-shadow(300);
+            $shadows-small:  multiple-box-shadow(700);
             $shadows-medium: multiple-box-shadow(200);
-            $shadows-big:    multiple-box-shadow(100);
+            $shadows-big:    multiple-box-shadow(300);
             @keyframes animStar {
                 from {
                     transform: translateY(0px);
@@ -312,13 +317,14 @@ main {
                     transform: translateY(-2000px);
                 }
             }
+
             .stars {
-                background-color: transparent;
+                background: transparent;
                 border-radius: 50%;
                 &:after {
-                    border-radius: 50%;
                     content: " ";
                     position: absolute;
+                    border-radius: 50%;
                     top: 2000px;
                     background: transparent;
                 }
@@ -327,7 +333,7 @@ main {
                 width: 1px;
                 height: 1px;
                 box-shadow: $shadows-small;
-                animation: animStar 70s linear infinite;
+                animation: animStar 50s linear infinite;
 
                 &:after {
                     width: 1px;
@@ -340,7 +346,7 @@ main {
                 width: 2px;
                 height: 2px;
                 box-shadow: $shadows-medium;
-                animation: animStar 90s linear infinite;
+                animation: animStar 100s linear infinite;
 
                 &:after {
                     width: 2px;
@@ -353,7 +359,7 @@ main {
                 width: 3px;
                 height: 3px;
                 box-shadow: $shadows-big;
-                animation: animStar 120s linear infinite;
+                animation: animStar 150s linear infinite;
 
                 &:after {
                     width: 3px;
@@ -424,6 +430,31 @@ main {
                         transform: translateZ(0);
                     }
                 }
+                @keyframes bottom-slide {
+                    0% {
+                        opacity: 0;
+                        -webkit-transform: translate3d(0,3000px,0);
+                        transform: translate3d(0,3000px,0);
+                    }
+                    60% {
+                        opacity: 1;
+                        -webkit-transform: translate3d(0,-20px,0);
+                        transform: translate3d(0,-20px,0);
+                    }
+                    75% {
+                        -webkit-transform: translate3d(0,10px,0);
+                        transform: translate3d(0,10px,0);
+                    }
+                    90% {
+                        -webkit-transform: translate3d(0,-5px,0);
+                        transform: translate3d(0,-5px,0);
+                    }
+                    100% {
+                        -webkit-transform: translateZ(0);
+                        transform: translateZ(0);
+                    }
+
+                }
 
                 .home__greeting {
                     text-align: center;
@@ -447,56 +478,6 @@ main {
 
                     .home__span--pink {
                         color: $pink;
-                    }
-
-                }
-
-                //@-webkit-keyframes bottom-slide {
-                //    0% {
-                //        opacity: 0;
-                //        -webkit-transform: translate3d(0,3000px,0);
-                //        transform: translate3d(0,3000px,0);
-                //    }
-                //    60% {
-                //        opacity: 1;
-                //        -webkit-transform: translate3d(0,-20px,0);
-                //        transform: translate3d(0,-20px,0);
-                //    }
-                //    75% {
-                //        -webkit-transform: translate3d(0,10px,0);
-                //        transform: translate3d(0,10px,0);
-                //    }
-                //    90% {
-                //        -webkit-transform: translate3d(0,-5px,0);
-                //        transform: translate3d(0,-5px,0);
-                //    }
-                //    100% {
-                //        -webkit-transform: translateZ(0);
-                //        transform: translateZ(0);
-                //    }
-                //}
-                @keyframes bottom-slide {
-                    0% {
-                        opacity: 0;
-                        -webkit-transform: translate3d(0,3000px,0);
-                        transform: translate3d(0,3000px,0);
-                    }
-                    60% {
-                        opacity: 1;
-                        -webkit-transform: translate3d(0,-20px,0);
-                        transform: translate3d(0,-20px,0);
-                    }
-                    75% {
-                        -webkit-transform: translate3d(0,10px,0);
-                        transform: translate3d(0,10px,0);
-                    }
-                    90% {
-                        -webkit-transform: translate3d(0,-5px,0);
-                        transform: translate3d(0,-5px,0);
-                    }
-                    100% {
-                        -webkit-transform: translateZ(0);
-                        transform: translateZ(0);
                     }
 
                 }
