--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,5 +1,10 @@
 @import "_mixins/font-face";
 
+//Web fonts from Google
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap&subset=cyrillic,cyrillic-ext,latin-ext');
+
+//Own tries -- REWORK!
 @include font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular");
 @include font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold);
 
