--- a/src/template/_footer.html
+++ b/src/template/_footer.html
@@ -1,5 +1,21 @@
-<footer id="footer">
+<footer id="footer" class="clipped">
 
-    <p>Panitka Alex<span>2019</span></p>
-    
+    <div class="social">
+        <a href="mailto:jijalikK@gmail.com">
+            <i class="fas fa-envelope-square"></i>
+        </a>
+        <a href="https://github.com/karlos-bob">
+            <i class="fab fa-github-square"></i>
+        </a>
+        <a href="https://www.facebook.com/alex.panitka">
+            <i class="fab fa-facebook-square"></i>
+        </a>
+    </div>
+    <div class="footnote">
+        PANITKA ALEX
+        <span>©2019</span></p>
+    </div>
+    <div class="page-up">
+        <i class="fas fa-angle-double-up"></i>
+    </div>
 </footer>
