--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 
 * {
 	box-sizing: border-box;
+    //h
   }
 
 ::placeholder {
@@ -58,7 +59,7 @@
 
 html, body {
   height: 100%;
-  scroll-behavior: smooth;
+  //scroll-behavior: smooth;
 }
 
 body {
@@ -69,12 +70,12 @@ body {
 	font-family: $default-font;
 	overflow-x: hidden;
 	color: $text;
+	background-color: #f1f1f1;
 
 	// Sticky Footer
 	display: flex;
   	flex-direction: column;
 	min-height: 100vh;
-
 
 	input, textarea {
 		border: #666 1px solid;
@@ -90,6 +91,17 @@ body {
 	header > div, 
 	footer > div {
 		max-width: 1200px;
+	}
+
+	h1, h2, h3 {
+		margin: 0;
+	}
+
+	hr {
+		height: 1px;
+		color: #000;
+		//background-color: #000;
+		box-shadow: none;
 	}
 
 }
@@ -111,15 +123,263 @@ b, strong {
 	font-weight: bold;
 }
 
-section#navMenu,
+section#nav-menu,
 footer {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
 
+.content {
+	width: 100%;
+}
 .content > .modal-wrap.visible {
   pointer-events: initial;
+}
+.content > .modal-wrap {
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	pointer-events: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+
+	.mask {
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: rgba(0, 0, 0, 0.5);
+		transition: opacity .3s;
+		opacity: 0;
+	}
+
+	.modal {
+		background: #fff;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+		position: relative;
+		transition: all .3s;
+		transform: scale(0.8);
+		opacity: 0; //ПЕРЕКЛЮЧИТЬ ПОСЛЕ ОТЛАДКИ
+		align-items: flex-start;
+		text-align: left;
+		box-sizing: border-box;
+		color: #333;
+		//top: -12vh;
+		height: initial;
+		max-width: 800px;
+
+		.transition {
+			transition: .7s;
+		}
+
+		.carousel-wrap {
+			position: relative;
+			background-color: #fff;
+
+			.carousel-window {
+				overflow: hidden;
+				height: 450px;
+				position: relative;
+
+				#carousel {
+					width: 10000px;
+					position: relative;
+					top: 0;
+					height: 100%;
+
+					.slide {
+						cursor: pointer;
+						float: left;
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						width: 100%;
+						height: 100%;
+					}
+				}
+
+				.carousel-navigation {
+					width: 100%;
+					position: absolute;
+					bottom: 0;
+					display: flex;
+					flex-direction: row;
+					justify-content: space-between;
+					z-index: 200000;
+
+					i {
+						width: 64px;
+						height: 54px;
+						border: none;
+						background: rgba(0, 0, 0, 0.3);
+						color: #fff;
+						cursor: pointer;
+						-moz-appearance: none !important;
+						-webkit-appearance: none !important;
+						-webkit-user-select: none;
+						-moz-user-select: none;
+						-ms-user-select: none;
+						-o-user-select: none;
+						user-select: none;
+						transition: all ease-out .2s !important;
+						text-align: center;
+						padding-top: 22px;
+
+						&::-moz-focus-outer, &::-moz-focus-inner {
+							border: 0;
+						}
+
+						&:focus {
+							outline: 0;
+						}
+						&:active {
+							font-size: 17pt;
+							padding-top: 18px;
+							transition: .2s !important;
+						}
+					}
+				}
+			}
+			.carousel-info {
+				padding: 35px 35px 25px;
+				border-top: 3px solid #1B242F;
+				box-sizing: border-box;
+				color: #444;
+
+				.title {
+					font-size: 22pt;
+					line-height: 30pt;
+					font-weight: bold;
+					border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+				}
+
+				.detail {
+					font-size: 16pt;
+					line-height: 18pt;
+					margin-top: 15px;
+				}
+
+				.info-buttons {
+					width: 100%;
+					display: flex;
+					flex-direction: row;
+					justify-content: space-between;
+					padding-top: 35px;
+					padding-bottom: 15px;
+					&:hover a {
+						cursor: pointer;
+					}
+
+					a.popUpLink {
+						display: block;
+						position: relative;
+						font-weight: bold;
+						margin: 0;
+						padding: 8px 0;
+						height: 50px;
+						color: #fff;
+						background-color: $blue;
+						text-transform: uppercase;
+						text-decoration: none;
+						text-align: center;
+						border: 2px solid $blue;
+						width: 170px;
+						font-size: 13pt;
+						transition: all .3s;
+						cursor: pointer;
+
+						i {
+							position: absolute;
+						}
+
+						i.fa-external-link-alt {
+							top: 13px;
+							display: inline;
+							left: 8px;
+						}
+						i.fa-angle-double-right {
+							top: 16px;
+							opacity: 0;
+						}
+
+						&:hover {
+							background-color: #fff;
+							color: #000;
+
+							i.fa-external-link-alt {
+								display: none;
+							}
+
+							i.fa-angle-double-right {
+								@keyframes go-left-right {
+									from {
+										right: 10px;
+									}
+									to {
+										right: 15px;
+									}
+								}
+								@-webkit-keyframes go-left-right {
+									from {
+										right: 10px;
+									}
+									to {
+										right: 15px;
+									}
+								}
+								opacity: 1;
+								animation: go-left-right .370s infinite alternate;
+								-webkit-animation: go-left-right .370s infinite alternate;
+
+							}
+						}
+					}
+					a.popUpClose {
+						width: 80px;
+						height: 50px;
+						margin: 0;
+						position: relative;
+
+						span::after {
+							position: absolute;
+							content: '';
+							display: block;
+							background-color: #bbb;
+							height: 5px;
+							width: 40px;
+							margin-bottom: 5px;
+							border-radius: 4px;
+							top: 20px;
+							right: 20px;
+							transition: all .4s;
+						}
+
+						span.popUpCloseSpan1::after {
+							transform: rotate(40deg);
+						}
+
+						span.popUpCloseSpan2::after {
+							transform: rotate(-40deg);
+						}
+
+						&:hover .popUpCloseSpan1::after {
+							transform: rotate(400deg);
+						}
+
+						&:hover .popUpCloseSpan2::after {
+							transform: rotate(320deg);
+						}
+					}
+
+				}
+			}
+		}
+	}
 }
 .content > .modal-wrap.visible .mask,
 .content > .modal-wrap.visible .modal {
@@ -131,17 +391,238 @@ footer {
   transition: .5s;
 }
 
+.sectionTitle {
+	font-family: 'Lato', sans-serif;
+	text-align: center;
+	color: $titles;
+	width: 100%;
+	line-height: 1.220;
+	margin-bottom: 30px;
+
+	h1 {
+		font-weight: 700;
+		font-size: 40pt;
+		text-transform: uppercase;
+	}
+
+	//h2 {
+	//	font-weight: 300;
+	//	font-size: 16pt;
+	//	font-style: italic;
+	//	&::before {
+	//		content: "'";
+	//	}
+	//	&::after {
+	//		content: "'";
+	//	}
+	//}
+}
+.sectionText {
+	font-family: raleway-regular,sans-serif;
+	text-align: left;
+	color: $text;
+	width: 100%;
+	line-height: 1.320;
+	font-size: 14pt;
+
+	h3 {
+		font-size: 18pt;
+		text-transform: uppercase;
+		margin-bottom: 15px;
+	}
+}
+
+.fixed {
+	top: 0;
+	bottom: inherit;
+	left: 0;
+	position: fixed;
+	-webkit-animation: popDown .5s;
+	animation: popDown .5s;
+
+	@keyframes popDown {
+		0% {
+			transform: translateY(-100px);
+		}
+	}
+}
+.clipped {
+	//padding: 120px 5%!important;
+	background-color: #000;
+}
+
+@-webkit-keyframes left-slide {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(-3000px, 0,0);
+		transform: translate3d(-3000px, 0,0);
+	}
+	60% {
+		opacity: 1;
+		-webkit-transform: translate3d(20px, 0,0);
+		transform: translate3d(20px, 0,0);
+	}
+	75% {
+		-webkit-transform: translate3d(-10px,0,0);
+		transform: translate3d(-10px,0,0);
+	}
+	90% {
+		-webkit-transform: translate3d(5px,0,0);
+		transform: translate3d(5px,0,0);
+	}
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+}
+@-webkit-keyframes right-slide {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(3000px, 0,0);
+		transform: translate3d(3000px, 0,0);
+	}
+	60% {
+		opacity: 1;
+		-webkit-transform: translate3d(-20px, 0,0);
+		transform: translate3d(-20px, 0,0);
+	}
+	75% {
+		-webkit-transform: translate3d(10px,0,0);
+		transform: translate3d(10px,0,0);
+	}
+	90% {
+		-webkit-transform: translate3d(-5px,0,0);
+		transform: translate3d(-5px,0,0);
+	}
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+}
+@keyframes bottom-slide {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(0,3000px,0);
+		transform: translate3d(0,3000px,0);
+	}
+	60% {
+		opacity: 1;
+		-webkit-transform: translate3d(0,-20px,0);
+		transform: translate3d(0,-20px,0);
+	}
+	75% {
+		-webkit-transform: translate3d(0,10px,0);
+		transform: translate3d(0,10px,0);
+	}
+	90% {
+		-webkit-transform: translate3d(0,-5px,0);
+		transform: translate3d(0,-5px,0);
+	}
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+	}
+
+}
+@keyframes go-top-down {
+	from {
+		top: 15px;
+	}
+	to {
+		top: 12px;
+	}
+}
+@-webkit-keyframes go-top-down {
+	from {
+		top: 15px;
+	}
+	to {
+		top: 12px;
+	}
+}
+@keyframes popIn {
+	0% {
+		transform: scale(0);
+	}
+	60% {
+		opacity: 1;
+		transform: scale(1.05);
+	}
+	80% {
+		transform: scale(0.95);
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
+
 footer {
-	background-color: $darkGray;
+	position: relative;
+	background-color: #333333;
 	text-transform: uppercase;
-	padding: 70px 0;
-  	//flex-shrink: 0;
-	p {
+	padding: 80px 0 40px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	-webkit-clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
+	clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
+
+	.page-up {
+		display: block;
+		position: relative;
+		width: 60px;
+		height: 60px;
+		background-color: $blue;
+		color: #fff;
+		text-align: center;
+		line-height: 60px;
+		font-size: 23pt;
+		transition: all .3s;
+		margin-right: 0;
+
+
+		i {
+			position: absolute;
+			margin: 0 auto;
+			top: 15px;
+			bottom: 0;
+			left: 0;
+			right: 0;
+		}
+		&:hover {
+			cursor: pointer;
+			i {
+				opacity: 1;
+				animation: go-top-down .330s infinite alternate;
+				-webkit-animation: go-top-down .330s infinite alternate;
+			}
+		}
+	}
+
+	.social {
+		display: flex;
+		flex-direction: row;
+		a {
+			display: inline-block;
+			font-size: 24pt;
+			margin: 0 20px;
+			color: $textGray;
+			&:hover {
+				color: #fff;
+				transition: all .3s;
+			}
+		}
+	}
+
+	.footnote {
 		color: $textGray;
-		
 		span {
 			color: $pink;
 			margin-left: 10px;
+			font-family: 'Lato', sans-serif;
+			opacity: 0.7;
 		}
 	}
 }
